
[package]
name = "lunar_calendar_ical"
version = "0.1.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"

[[bin]]
name = "lunar_calendar_ical"

[dependencies]
#futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
#futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
futures = { version = "0.3.*" }
hyper = { version = "0.13.0-alpha.4", features = ["runtime", "tcp", "unstable-stream"] }
chrono = { version = "0.4.*" }
log = { version = "0.4.*" }
env_logger = { version = "0.7.*" }
diesel = { version = "1.4.*", features = ["r2d2", "postgres", "chrono"] }
clap = { version = "2.33.*" }
rand = { version = "0.7.*" }
gen_api = { path = "../api/gen_api" }
gen_db = { path = "../db/gen_db" }
