
[package]
name = "lunar_calendar_ical"
version = "0.1.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"

[[bin]]
name = "lunar_calendar_ical"

[dependencies]
#futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
#futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
futures = "0.3.21"
hyper = { version = "0.14.20", features = ["runtime", "tcp"] }
chrono = "0.4.19"
log = "0.4.17"
env_logger = "0.9.0"
diesel = { version = "1.4.8", features = ["r2d2", "postgres", "chrono"] }
clap = "3.2.15"
rand = "0.8.5"
gen_api = { path = "../api/gen_api" }
gen_db = { path = "../db/gen_db" }
