[package]
name = "gen_api"
version = "0.1.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gen_api"

[dependencies]

[build-dependencies]
schemafy = { version = "0.5.*" }
