[package]
name = "gen_api"
version = "0.1.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gen_api"

[dependencies]
schemafy = "0.6.0"
schemafy_core = "0.6.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
rmp-serde = "1.1.0"

[build-dependencies]
chrono = "0.4.19"
serde = { version = "1.0.140", features = ["derive"] }
#serde_derive = { version = "1.0.*" }
serde_json = "1.0.82"
serde_yaml = "0.8.26"
pathdiff = "0.2.1"
