[package]
name = "gen_db"
version = "0.1.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gen_db"

[dependencies]

[dev-dependencies]
diesel_cli = { version = "1.4.1", features = ["postgres"] }

[build-dependencies]
diesel_cli_ext = "0.3.6"
